# docs/swagger.json
@@ -2844,7 +2844,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/dto.WebhookConfigRequest"
                         }
                     }
                 ],
@@ -3672,6 +3672,35 @@
                 "url": {
                     "type": "string",
                     "example": "https://meusite.com/webhook"
+                }
+            }
+        },
+        "dto.WebhookConfigRequest": {
+            "type": "object",
+            "required": [
+                "events",
+                "url"
+            ],
+            "properties": {
+                "active": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "events": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "message",
+                        "receipt",
+                        "presence"
+                    ]
+                },
+                "url": {
+                    "type": "string",
+                    "example": "https://my-app.com/webhook"
                 }
             }
         },
